--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,5 @@
-# Gradle files
-.gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Log/OS Files
-*.log
-
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output.json
-
-# IntelliJ
-*.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
-
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# Android Profiling
-*.hprof
+[
+  {
+    "img": "https://www.uplooder.net/img/image/2/8ab31fb2d4adcd9d28f88baf1ec49e4c/IMG-20230707-161805-257.jpg"
+  }
+]
